# talos

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  EVOLUTION.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  build.sh
.agent-governance/: manifest.yaml
crates/talos-agent/: Cargo.toml
crates/talos-agent/prompts/: identity.txt  memory.md
crates/talos-agent/src/: caching.rs  compaction.rs  compression.rs  configuration.rs  context.rs  helpers.rs  lib.rs  prompt.rs  scheduler.rs  session.rs  tests.rs  token.rs  tool_execution.rs  tool_output.rs
crates/talos-agent/src/compaction/: constants.rs  engine.rs  policy.rs  tests.rs  types.rs
crates/talos-agent/src/prompt/: assets.rs  builder.rs  sections.rs  tests.rs  types.rs
crates/talos-agent/src/session/: tests.rs  turn.rs
crates/talos-cli/: Cargo.toml  README.md
crates/talos-cli/src/: approval.rs  colors.rs  dashboard_helpers.rs  diagnostics.rs  event_loop.rs  evolution_runtime.rs  exploration_cli.rs  governance.rs  governance_mutation.rs  image_authorization.rs  image_validation.rs  init_wizard.rs  logging.rs  main.rs  mcp_runtime.rs  memory_cli.rs  mode_inline.rs  mode_interactive.rs  mode_print.rs  mode_runners.rs  mode_runners_tests.rs  mode_runtime.rs  model_lifecycle.rs  models_browser.rs  permissions.rs  provider_discovery.rs  provider_handlers.rs  provider_setup.rs  recent_models.rs  registry.rs  runtime_adapter.rs  session_handlers.rs  session_setup.rs  session_transition.rs  skill_runtime.rs  storage.rs  test_support.rs  tests.rs  todo_view.rs  tui_bridge.rs  (+1 more)
crates/talos-cli/tests/: diagnostics_e2e.rs  hooks_e2e.rs  mcp_client_e2e.rs  mcp_server_e2e.rs  memory_prompt_injection.rs  no_catalog_db_guard.rs  rpc_e2e.rs  skill_runtime_e2e.rs
crates/talos-cli/tests/fixtures/: echo_mcp_server.rs  rpc_hello.json
crates/talos-config/: Cargo.toml  build.rs
crates/talos-config/src/: agents.rs  builtin.rs  config.rs  credentials.rs  endpoint.rs  env.rs  error.rs  lib.rs  model.rs  models.toml  opencode.rs  tests.rs  types.rs
crates/talos-conversation/: Cargo.toml
crates/talos-conversation/src/: command_registry.rs  engine.rs  engine_tests.rs  governance_summary.rs  lib.rs  types.rs  validation.rs
crates/talos-core/: Cargo.toml
crates/talos-core/src/: approval.rs  lib.rs  message.rs  model.rs  provider.rs  session.rs  tool.rs  tool_filter.rs
crates/talos-dashboard/: Cargo.toml
crates/talos-dashboard/src/: lib.rs
crates/talos-evolution/: Cargo.toml
crates/talos-evolution/src/: adapter.rs  extractor.rs  hook.rs  lib.rs  observer.rs  store.rs
crates/talos-mcp/: Cargo.toml
crates/talos-mcp/src/: error.rs  lib.rs  types.rs
crates/talos-mcp/src/client/: adapter.rs  dispatcher.rs  facade.rs  manager.rs  mod.rs  transport.rs
crates/talos-mcp/src/server/: handler.rs  mod.rs  permission.rs
crates/talos-mcp/tests/: mock_stdio_roundtrip.rs  server_handshake.rs  server_permission_deny.rs  subprocess_crash.rs
crates/talos-memory/: Cargo.toml
crates/talos-memory/src/: benchmark.rs  consolidation.rs  entities.rs  graph.rs  lib.rs  prompt.rs  store.rs  tests.rs  types.rs
crates/talos-models/: Cargo.toml
crates/talos-models/src/: error.rs  import.rs  lib.rs  store.rs
crates/talos-permission/: Cargo.toml
crates/talos-permission/src/: access_evidence.rs  lib.rs  permission_tests.rs  resource.rs  rule.rs  workspace_trust.rs
crates/talos-plugin/: Cargo.toml
crates/talos-plugin/src/: error.rs  event.rs  handler.rs  lib.rs  manifest.rs  registry.rs  wasm.rs
crates/talos-plugin/src/builtin/: logging.rs  mod.rs
crates/talos-plugin/tests/: dispatch_order.rs  permission_boundary.rs  timeout_and_panic.rs
crates/talos-plugin/tests/fixtures/read-only-demo/: demo.wat  talos-plugin.toml
crates/talos-provider/: Cargo.toml
crates/talos-provider/src/: anthropic_request.rs  anthropic_stream.rs  image_io.rs  lib.rs  mock.rs  openai.rs  openai_request.rs  openai_sse.rs  retry.rs
crates/talos-provider/tests/: anthropic_test.rs
crates/talos-rpc/: Cargo.toml
crates/talos-rpc/src/: cancel.rs  error.rs  framing.rs  lib.rs  protocol.rs  runtime.rs  server.rs
crates/talos-rpc/src/methods/: agent.rs  mod.rs  system.rs
crates/talos-rpc/tests/: agent_run_roundtrip.rs  malformed_input.rs  method_not_found.rs
crates/talos-runtime/: Cargo.toml
crates/talos-runtime/examples/: approval.rs  custom_tool.rs  prompt_and_preview.rs  quickstart.rs
crates/talos-runtime/examples/common/: mod.rs
crates/talos-runtime/src/: lib.rs
crates/talos-sandbox/: Cargo.toml
crates/talos-sandbox/src/: hardening.rs  lib.rs
crates/talos-session/: Cargo.toml
crates/talos-session/src/: compact_text.rs  compaction_engine.rs  compression.rs  durable.rs  error.rs  jsonl.rs  lib.rs  manager.rs  segment_chain.rs  sqlite.rs  store.rs  tests.rs  todo.rs  tool_compression.rs  topology.rs  transcript.rs  types.rs
crates/talos-skill/: Cargo.toml
crates/talos-skill/src/: error.rs  lib.rs  loader.rs  manager.rs  parser.rs  tests.rs  token.rs  types.rs
crates/talos-tools/: Cargo.toml  build.rs
crates/talos-tools/src/: bash_permission_policy.toml  bash_tool.rs  browser_page.rs  diff_stat.rs  document_extract.rs  exec_tool.rs  fetch_url.rs  file_tools.rs  git.rs  git_tests.rs  git_write.rs  http_request.rs  image_validation.rs  lib.rs  read_image_tool.rs  save_url.rs  search_engine.rs  search_tools.rs  symbol.rs  tree.rs  web_search.rs
crates/talos-tools/src/file_tools/: delete_tool.rs  ls_tool.rs  read_tool.rs  snapshot.rs  tests.rs  write_edit_tools.rs
crates/talos-tools/tests/: document_boundaries.rs  integration_hardening.rs
crates/talos-tui/: Cargo.toml
crates/talos-tui/src/: app.rs  app_stream.rs  app_summary.rs  clipboard.rs  custom_terminal.rs  evolution.rs  export.rs  formatting.rs  highlight.rs  inline_terminal.rs  lib.rs  panel_state.rs  scrollback.rs  scrollback_input.rs  scrollback_markdown.rs  scrollback_status.rs  scrollback_status_git.rs  sidebar.rs  splash.rs  state.rs  state_tests.rs  stream_markdown.rs  tests.rs  theme.rs  tool_display.rs  widgets.rs
crates/talos-tui/src/app/: app_tests.rs
(+622 files in other folders)
