[workspace]
resolver = "3"
members = [
    "crates/talos-core",
    "crates/talos-config",
    "crates/talos-provider",
    "crates/talos-agent",
    "crates/talos-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.lints.clippy]
unwrap_used = "warn"
