[workspace]
resolver = "3"
members = [
    "crates/talos-core",
    "crates/talos-config",
    "crates/talos-provider",
    "crates/talos-agent",
    "crates/talos-plugin",
    # I009-S3 begin
    "crates/talos-mcp",
    # I009-S3 end
    # I009-S5 begin
    "crates/talos-rpc",
    # I009-S5 end
    "crates/talos-cli",
    "crates/talos-session",
    "crates/talos-tools",
    "crates/talos-sandbox",
    "crates/talos-permission",
    "crates/talos-conversation",
    "crates/talos-tui",
    "crates/talos-skill",
    "crates/talos-evolution",
    "crates/talos-memory",
    "crates/talos-exploration",
]

[workspace.package]
edition = "2024"
version = "0.1.2"
license = "Apache-2.0"
rust-version = "1.95"

[profile.release]
lto = true
strip = true

[workspace.lints.clippy]
unwrap_used = "warn"
