[workspace]
resolver = "3"
members = [
    "crates/talos-core",
    "crates/talos-config",
    "crates/talos-provider",
    "crates/talos-agent",
    "crates/talos-plugin",
    # I009-S3 begin
    "crates/talos-mcp",
    # I009-S3 end
    # I009-S5 begin
    "crates/talos-rpc",
    # I009-S5 end
    "crates/talos-cli",
    "crates/talos-session",
    "crates/talos-tools",
    "crates/talos-sandbox",
    "crates/talos-permission",
    "crates/talos-conversation",
    "crates/talos-tui",
    "crates/talos-skill",
    "crates/talos-evolution",
    "crates/talos-memory",
    "crates/talos-exploration",
    "crates/talos-runtime",
    "crates/talos-dashboard",
    # Quarantined non-runtime member (MC-002, 2026-07-06): no production crate
    # depends on `talos-models`; kept to avoid a semver-breaking removal. Do
    # not wire it into any CLI/TUI/runtime path.
    "crates/talos-models",
]

[workspace.package]
edition = "2024"
version = "0.3.5"
license = "Apache-2.0"
repository = "https://github.com/wjhuang88/talos"
homepage = "https://github.com/wjhuang88/talos"
rust-version = "1.95"

[profile.release]
# Ship portable, whole-program-optimized binaries. A single codegen unit gives
# LLVM maximum cross-crate optimization latitude; the longer release build is
# intentional for runtime performance.
lto = "fat"
codegen-units = 1
strip = true

[workspace.lints.clippy]
unwrap_used = "warn"
