[package]
name = "talos-agent"
description = "Core orchestration logic and the agent turn loop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { path = "../talos-core" }
talos-tools = { path = "../talos-tools" }
talos-permission = { path = "../talos-permission" }
talos-sandbox = { path = "../talos-sandbox" }
talos-skill = { path = "../talos-skill" }
talos-plugin = { path = "../talos-plugin" }
async-trait = "0.1"
futures-util = "0.3"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "process"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
talos-session = { path = "../talos-session" }
tempfile = "3"

[lints]
workspace = true
