[package]
name = "talos-agent"
description = "Core orchestration logic and the agent turn loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.3.4", path = "../talos-core" }
talos-tools = { version = "0.3.4", path = "../talos-tools" }
talos-permission = { version = "0.3.4", path = "../talos-permission" }
talos-sandbox = { version = "0.3.4", path = "../talos-sandbox" }
talos-skill = { version = "0.3.4", path = "../talos-skill" }
talos-plugin = { version = "0.3.4", path = "../talos-plugin" }
talos-memory = { version = "0.3.4", path = "../talos-memory" }
talos-session = { version = "0.3.4", path = "../talos-session" }
async-trait = "0.1"
futures-util = "0.3"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "process"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }

[lints]
workspace = true
