[package]
name = "talos-cli"
description = "Primary command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "talos"
path = "src/main.rs"

[dependencies]
talos-core = { path = "../talos-core" }
talos-config = { path = "../talos-config" }
talos-provider = { path = "../talos-provider" }
talos-agent = { path = "../talos-agent" }
talos-plugin = { path = "../talos-plugin" }
# I009-S3 begin
talos-mcp = { path = "../talos-mcp" }
# I009-S3 end
# I009-S5 begin
talos-rpc = { path = "../talos-rpc" }
# I009-S5 end
talos-tools = { path = "../talos-tools" }
talos-session = { path = "../talos-session" }
talos-memory = { path = "../talos-memory" }
talos-permission = { path = "../talos-permission" }
talos-evolution = { path = "../talos-evolution" }
talos-skill = { path = "../talos-skill" }
serde_json = "1"
toml = "1.1.2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tokio-util = "0.7"
talos-tui = { path = "../talos-tui" }
talos-conversation = { path = "../talos-conversation" }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rmcp = "1.7.0"
futures = "0.3"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
# I009-S4 begin
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process", "transport-async-rw"] }
# I009-S4 end
