[package]
name = "talos-cli"
description = "Primary command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "talos"
path = "src/main.rs"

[dependencies]
talos-core = { version = "0.3.5", path = "../talos-core" }
talos-config = { version = "0.3.5", path = "../talos-config" }
talos-provider = { version = "0.3.5", path = "../talos-provider" }
talos-agent = { version = "0.3.5", path = "../talos-agent" }
talos-plugin = { version = "0.3.5", path = "../talos-plugin", features = ["wasm"] }
# I009-S3 begin
talos-mcp = { version = "0.3.5", path = "../talos-mcp" }
# I009-S3 end
# I009-S5 begin
talos-rpc = { version = "0.3.5", path = "../talos-rpc" }
# I009-S5 end
talos-tools = { version = "0.3.5", path = "../talos-tools" }
talos-session = { version = "0.3.5", path = "../talos-session" }
talos-memory = { version = "0.3.5", path = "../talos-memory" }
talos-permission = { version = "0.3.5", path = "../talos-permission" }
talos-evolution = { version = "0.3.5", path = "../talos-evolution" }
talos-skill = { version = "0.3.5", path = "../talos-skill" }
talos-exploration = { version = "0.3.5", path = "../talos-exploration" }
talos-dashboard = { version = "0.3.5", path = "../talos-dashboard" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tokio-util = "0.7"
talos-tui = { version = "0.3.5", path = "../talos-tui" }
talos-conversation = { version = "0.3.5", path = "../talos-conversation" }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rmcp = "1.7.0"
futures = "0.3"
crossterm = "0.29"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
# I009-S4 begin
rmcp = { version = "1.7.0", default-features = false, features = ["client", "transport-child-process", "transport-async-rw"] }
# I009-S4 end
