[package]
name = "talos-config"
description = "Configuration schema, validation, and environment substitution"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { path = "../talos-core" }
talos-memory = { path = "../talos-memory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
schemars = "1.2.1"
thiserror = "2"

[lints]
workspace = true
