[package]
name = "talos-config"
description = "Configuration schema, validation, and environment substitution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.5.0", path = "../talos-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
schemars = "1.2.1"
thiserror = "2"
tracing = "0.1"
zstd = "0.13"
[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
zstd = "0.13"
[lints]
workspace = true
