[package]
name = "talos-conversation"
description = "Conversation engine for Talos agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { path = "../talos-core" }
tokio = { version = "1", features = ["sync", "macros", "time", "rt", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1"

[lints]
workspace = true
