[package]
name = "talos-conversation"
description = "Conversation engine for Talos agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.3.4", path = "../talos-core" }
talos-plugin = { version = "0.3.4", path = "../talos-plugin" }
tokio = { version = "1", features = ["sync", "macros", "time", "rt", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
