[package]
name = "talos-core"
description = "Foundation types, core traits, and error definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[lints]
workspace = true
