[package]
name = "talos-dashboard"
description = "Read-only loopback dashboard server for Talos (ADR-031)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["net", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
