[package]
name = "talos-evolution"
description = "Self-evolution engine for Talos agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
talos-core = { version = "0.3.5", path = "../talos-core" }
talos-plugin = { version = "0.3.5", path = "../talos-plugin" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[lints]
workspace = true
