[package]
name = "talos-mcp"
description = "MCP client/server integration for Talos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.3.6", path = "../talos-core" }
talos-plugin = { version = "0.3.6", path = "../talos-plugin" }
# I009-S4 begin
talos-permission = { version = "0.3.6", path = "../talos-permission" }
rmcp = { version = "1.7.0", default-features = false, features = ["server", "client", "transport-io", "transport-child-process", "transport-async-rw"] }
# I009-S4 end
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream"] }

[dev-dependencies]
tempfile = "3"
# I009-S4 begin
talos-tools = { version = "0.3.6", path = "../talos-tools" }
# I009-S4 end

[lints]
workspace = true
