[package]
name = "talos-memory"
description = "Semantic and procedural memory storage for Talos agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
