[package]
name = "talos-models"
description = "SQLite-backed model catalog store and resolver for Talos agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.2.2", path = "../talos-core" }
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
