[package]
name = "talos-models"
# Quarantined (non-runtime) as of 2026-07-06 per MC-002. No production crate in
# the workspace depends on this package; runtime model/provider metadata is
# sourced from the packaged `crates/talos-config/src/models.toml` instead.
# Kept (not removed) to avoid a semver-breaking deletion. Do not wire this
# crate into any CLI/TUI/runtime path.
description = "Quarantined non-runtime SQLite catalog store (historical/foundation only); runtime Talos uses packaged models.toml instead"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.3.9", path = "../talos-core" }
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
