[package]
name = "talos-permission"
description = "Permission rules engine for gating tool execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
talos-core = { version = "0.2.2", path = "../talos-core" }
thiserror = "2"
url = "2"

[lints]
workspace = true
