[package]
name = "talos-plugin"
description = "Lifecycle hooks and plugin foundations for Talos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.2.0", path = "../talos-core" }
talos-permission = { version = "0.2.0", path = "../talos-permission" }
async-trait = "0.1"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true
