[package]
name = "talos-plugin"
description = "Lifecycle hooks and plugin foundations for Talos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
wasm = ["dep:wasmtime"]

[dependencies]
talos-core = { version = "0.3.8", path = "../talos-core" }
talos-permission = { version = "0.3.8", path = "../talos-permission" }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
toml = "1.1.2"
tracing = "0.1"
wasmtime = { version = "46.0.1", optional = true, default-features = false, features = ["cranelift", "runtime", "parallel-compilation", "wat"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lints]
workspace = true
