[package]
name = "talos-provider"
description = "LLM client abstractions and provider-specific implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
talos-core = { path = "../talos-core" }
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
