[package]
name = "talos-provider"
description = "LLM client abstractions and provider-specific implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
talos-config = { version = "0.3.8", path = "../talos-config" }
talos-core = { version = "0.3.8", path = "../talos-core" }
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
