[package]
name = "talos-rpc"
description = "JSON-RPC 2.0 server over stdio for Talos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.3.9", path = "../talos-core" }
talos-plugin = { version = "0.3.9", path = "../talos-plugin" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"

[lints]
workspace = true
