[package]
name = "talos-runtime"
description = "Embeddable Talos agent runtime facade"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
serde_json = "1"
talos-agent = { path = "../talos-agent" }
talos-core = { path = "../talos-core" }
talos-permission = { path = "../talos-permission" }
talos-sandbox = { path = "../talos-sandbox" }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
talos-provider = { path = "../talos-provider" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[lints]
workspace = true
