[package]
name = "talos-runtime"
description = "Embeddable Talos agent runtime facade"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
serde_json = "1"
talos-agent = { version = "0.3.3", path = "../talos-agent" }
talos-core = { version = "0.3.3", path = "../talos-core" }
talos-permission = { version = "0.3.3", path = "../talos-permission" }
talos-sandbox = { version = "0.3.3", path = "../talos-sandbox" }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
talos-provider = { version = "0.3.3", path = "../talos-provider" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[lints]
workspace = true
