[package]
name = "talos-runtime"
description = "Embeddable Talos agent runtime facade"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
serde_json = "1"
talos-agent = { version = "0.4.0", path = "../talos-agent" }
talos-core = { version = "0.4.0", path = "../talos-core" }
talos-permission = { version = "0.4.0", path = "../talos-permission" }
talos-plugin = { version = "0.4.0", path = "../talos-plugin" }
talos-sandbox = { version = "0.4.0", path = "../talos-sandbox" }
talos-session = { version = "0.4.0", path = "../talos-session" }
talos-skill = { version = "0.4.0", path = "../talos-skill" }

thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
talos-provider = { version = "0.4.0", path = "../talos-provider" }
talos-tools = { version = "0.4.0", path = "../talos-tools" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[lints]
workspace = true
