[package]
name = "talos-sandbox"
description = "Platform-specific sandboxing for bash command execution"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { path = "../talos-core" }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["process"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[lints]
workspace = true
