[package]
name = "talos-sandbox"
description = "Platform-specific sandboxing for bash command execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.3.9", path = "../talos-core" }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["process"] }

[target.'cfg(unix)'.dependencies]
libc = "1.0.0-alpha.3"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"

[lints]
workspace = true
