[package]
name = "talos-skill"
description = "SKILL.md parser and loader for Talos agent skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
pulldown-cmark = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
