[package]
name = "talos-tools"
description = "Built-in agent tools: bash, file operations, and more"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { path = "../talos-core" }
talos-sandbox = { path = "../talos-sandbox" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "time"] }
regex = "1"
walkdir = "2"
glob = "0.3"
similar = "2"
gix = { version = "0.66", default-features = false, features = [
    "basic", "status", "revision", "blob-diff", "index"
] }
arborium = { version = "2.16", default-features = false, features = [
    "lang-rust", "lang-python", "lang-typescript", "lang-javascript",
    "lang-go", "lang-java", "lang-c", "lang-cpp", "lang-c-sharp",
    "lang-bash", "lang-sql", "lang-powershell", "lang-lua", "lang-dart",
    "lang-html", "lang-css", "lang-json", "lang-toml", "lang-markdown",
    "lang-ruby", "lang-php", "lang-kotlin", "lang-swift"
] }

[target.'cfg(unix)'.dependencies]
libc = "1.0.0-alpha.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt"] }

[lints]
workspace = true
