[package]
name = "talos-tools"
description = "Built-in agent tools: bash, file operations, and more"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { version = "0.2.2", path = "../talos-core" }
talos-sandbox = { version = "0.2.2", path = "../talos-sandbox" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "time"] }
regex = "1"
walkdir = "2"
glob = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
similar = "3"
gix = { version = "0.85", default-features = false, features = [
    "basic", "status", "revision", "blob-diff", "index", "sha1"
] }
arborium = { version = "2.18", default-features = false, features = [
    "lang-rust", "lang-python", "lang-typescript", "lang-javascript",
    "lang-go", "lang-java", "lang-c", "lang-cpp", "lang-c-sharp",
    "lang-bash", "lang-sql", "lang-powershell", "lang-lua", "lang-dart",
    "lang-html", "lang-css", "lang-json", "lang-toml", "lang-markdown",
    "lang-ruby", "lang-php", "lang-kotlin", "lang-swift"
] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
rust-websearch = "0.1"
scraper = "0.27"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "1.0.0-alpha.3"

[dev-dependencies]
talos-permission = { version = "0.2.2", path = "../talos-permission" }
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt"] }

[lints]
workspace = true
