[package]
name = "talos-tui"
description = "Terminal user interface for Talos agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
talos-core = { path = "../talos-core" }
talos-permission = { path = "../talos-permission" }
talos-conversation = { path = "../talos-conversation" }
ratatui = { version = "0.30", features = ["scrolling-regions"] }
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }
anyhow = "1"
futures = "0.3"
serde_json = "1"
tui-markdown = "0.3"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
