[package]
name = "talos-tui"
description = "Terminal user interface for Talos agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
talos-core = { version = "0.2.1", path = "../talos-core" }
talos-permission = { version = "0.2.1", path = "../talos-permission" }
talos-conversation = { version = "0.2.1", path = "../talos-conversation" }
ratatui = { version = "0.30", features = ["scrolling-regions"] }
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }
futures = "0.3"
serde_json = "1"
tui-markdown = "0.3"
mermaid-text = "0.56"
arborium = { version = "2.18", default-features = false, features = [
    "lang-rust", "lang-python", "lang-typescript", "lang-javascript",
    "lang-go", "lang-java", "lang-c", "lang-cpp", "lang-c-sharp",
    "lang-bash", "lang-sql", "lang-powershell", "lang-lua", "lang-dart",
    "lang-html", "lang-css", "lang-json", "lang-toml", "lang-markdown",
    "lang-ruby", "lang-php", "lang-kotlin", "lang-swift"
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
